# FreeRTOS-TP

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSVariant.h  main.c
cmake/: avr-toolchain.cmake
